@@ -3,3 +3,4 @@
 - Associare elementi a metodi
 
 - Come fa `controllers.App` a fare riferimento al primo stage?
+- Path marco: `--module-path ${PATH_TO_JAVAFX} --add-modules javafx.fxml,javafx.controls,javafx.graphics`
